--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,70 @@
 absl-py==2.3.1
 astunparse==1.6.3
 audioread==3.0.1
-cachetools==5.5.2
-certifi==2025.8.3
-cffi==1.17.1
-charset-normalizer==3.4.3
-contourpy==1.1.1
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+contourpy==1.3.3
 cycler==0.12.1
 decorator==5.2.1
 flatbuffers==25.9.23
-fonttools==4.57.0
-gast==0.4.0
-google-auth==2.41.1
-google-auth-oauthlib==1.0.0
+fonttools==4.60.1
+gast==0.6.0
 google-pasta==0.2.0
-grpcio==1.70.0
-h5py==3.11.0
-idna==3.10
-importlib-metadata==8.5.0
-importlib-resources==6.4.5
-joblib==1.4.2
-kagglehub==0.2.9
-keras==2.12.0
-kiwisolver==1.4.7
-lazy-loader==0.4
+grpcio==1.75.1
+h5py==3.15.0
+idna==3.11
+joblib==1.5.2
+kagglehub==0.3.13
+keras==3.11.3
+kiwisolver==1.4.9
+lazy_loader==0.4
 libclang==18.1.1
 librosa==0.11.0
-llvmlite==0.41.1
-Markdown==3.7
-MarkupSafe==2.1.5
-matplotlib==3.7.5
-msgpack==1.1.1
-numba==0.58.1
-numpy==1.24.3
-oauthlib==3.3.1
-opt-einsum==3.4.0
+llvmlite==0.45.1
+Markdown==3.9
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+matplotlib==3.10.7
+mdurl==0.1.2
+ml-dtypes==0.3.2
+msgpack==1.1.2
+namex==0.1.0
+numba==0.62.1
+numpy==1.26.4
+opt_einsum==3.4.0
+optree==0.17.0
 packaging==25.0
-pandas==2.0.3
-pillow==10.4.0
-platformdirs==4.3.6
+pandas==2.3.3
+pillow==11.3.0
+platformdirs==4.5.0
 pooch==1.8.2
 protobuf==4.25.8
-pyasn1==0.6.1
-pyasn1-modules==0.4.2
 pycparser==2.23
-pyparsing==3.1.4
+Pygments==2.19.2
+pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 pytz==2025.2
-requests==2.32.4
-requests-oauthlib==2.0.0
-rsa==4.9.1
-scikit-learn==1.3.2
-scipy==1.10.1
+PyYAML==6.0.3
+requests==2.32.5
+rich==14.2.0
+scikit-learn==1.7.2
+scipy==1.16.2
 six==1.17.0
 soundfile==0.13.1
-soxr==0.3.7
-tensorboard==2.13.0
+soxr==1.0.0
+tensorboard==2.16.2
 tensorboard-data-server==0.7.2
-tensorflow==2.13.0
-tensorflow-estimator==2.13.0
-tensorflow-macos==2.13.0
-tensorflow-metal==1.0.1
-termcolor==2.4.0
-threadpoolctl==3.5.0
+tensorflow==2.16.2
+tensorflow-io-gcs-filesystem==0.37.1
+tensorflow-macos==2.16.2
+tensorflow-metal==1.2.0
+tensorflow_keras==0.1
+termcolor==3.1.0
+threadpoolctl==3.6.0
 tqdm==4.67.1
-typing-extensions==4.5.0
+typing_extensions==4.15.0
 tzdata==2025.2
-urllib3==2.2.3
-werkzeug==3.0.6
+urllib3==2.5.0
+Werkzeug==3.1.3
 wrapt==1.17.3
-zipp==3.20.2
